--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -15,5 +15,15 @@
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
+    
+    <item
+        android:id="@+id/navigation_new"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="New entry"/>
+
+    <item
+        android:id="@+id/navigation_driver"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="New driver"/>
 
 </menu>
