--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,7 @@
         tools:layout_editor_absoluteY="380dp" />
 
     <TextView
+        android:id="@+id/iniciout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btnRegistroLogin"
