--- a/app/src/main/res/layout/content_utinicio.xml
+++ b/app/src/main/res/layout/content_utinicio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,5 +7,20 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".UT.UTInicio"
     tools:showIn="@layout/app_bar_utinicio">
+    
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapaUbicacionTransportista"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listaTransportista"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_below="@id/mapaUbicacionTransportista"
+        android:layout_alignParentStart="true" />
 
 </android.support.constraint.ConstraintLayout>
