--- a/app/src/main/res/layout/content_utinicio.xml
+++ b/app/src/main/res/layout/content_utinicio.xml
@@ -23,4 +23,4 @@
         android:layout_below="@id/mapaUbicacionTransportista"
         android:layout_alignParentStart="true" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
