--- a/app/src/main/res/layout/obj_lista_viaje_datos.xml
+++ b/app/src/main/res/layout/obj_lista_viaje_datos.xml
@@ -51,6 +51,7 @@
             android:id="@+id/obj_viaje_humedad"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
+            android:layout_marginLeft="10dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/obj_viaje_proximidad"
             android:hint="$1250"
