--- a/app/src/main/res/menu/activity_utinicio_drawer.xml
+++ b/app/src/main/res/menu/activity_utinicio_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_inicio"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="Inicio" />
+        <item
             android:id="@+id/nav_notificaciones"
             android:icon="@drawable/ic_notificacion"
             android:title="Notificaciones" />
@@ -15,12 +19,12 @@
 
         <item
             android:id="@+id/navigation_new"
-            android:icon="@drawable/ic_dashboard_black_24dp"
+            android:icon="@drawable/ic_nuevocamion"
             android:title="Nuevo camion"/>
 
         <item
             android:id="@+id/navigation_driver"
-            android:icon="@drawable/ic_dashboard_black_24dp"
+            android:icon="@drawable/ic_nuevoconductor"
             android:title="Nuevo conductor"/>
     </group>
 </menu>
