--- a/app/src/main/res/layout/activity_utnuevo_transporte.xml
+++ b/app/src/main/res/layout/activity_utnuevo_transporte.xml
@@ -4,99 +4,107 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img_fondo"
     tools:context=".UT.UTNuevoTransporte">
 
     <EditText
         android:id="@+id/UTPlacas"
-        android:layout_width="288dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="100dp"
-        android:layout_toRightOf="@+id/txtPlacas"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/bg_blanco_redondo"
+        android:inputType="number"
+        android:textColor="@color/colorNegro"
         android:hint="Número de placa"
         android:textSize="20sp" />
 
     <EditText
         android:id="@+id/UTTipo"
-        android:layout_width="288dp"
-        android:layout_height="wrap_content"
         android:layout_below="@id/UTTonelaje"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="21dp"
-        android:layout_toRightOf="@+id/txtTipo"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/bg_blanco_redondo"
+        android:inputType="text"
+        android:textColor="@color/colorNegro"
         android:textSize="20sp" />
 
     <EditText
         android:id="@+id/UTEmpresa"
-        android:layout_width="288dp"
-        android:layout_height="wrap_content"
         android:layout_below="@id/UTTipo"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="13dp"
-        android:layout_toRightOf="@+id/txtUTEmpresa"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/bg_blanco_redondo"
+        android:inputType="number"
+        android:textColor="@color/colorNegro"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/txtUTEmpresa"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/txtTipo"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
+        android:textColor="@color/colorBlanco"
         android:text="Empresa"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/txtTipo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/txtTonelaje"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/colorBlanco"
         android:text="Tipo"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/UTTonelaje"
-        android:layout_width="288dp"
-        android:layout_height="wrap_content"
         android:layout_below="@id/UTPlacas"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_toRightOf="@+id/txtTonelaje"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/bg_blanco_redondo"
         android:inputType="number"
+        android:textColor="@color/colorNegro"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/txtPlacas"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="100dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:textColor="@color/colorBlanco"
         android:text="Placas"
-        android:textSize="25sp" />
+        android:layout_marginTop="30dp"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/txtTonelaje"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/txtPlacas"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
+        android:textColor="@color/colorBlanco"
         android:text="Tonelaje"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="REGISTRAR"
         android:id="@+id/UTRegistrar"
-        android:textSize="25sp"
+        android:background="@drawable/bg_blanco_redondo"
+        android:textSize="20sp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:layout_below="@id/UTEmpresa"/>
 
 </RelativeLayout>
