--- a/app/src/main/res/layout/activity_utnuevo_transporte.xml
+++ b/app/src/main/res/layout/activity_utnuevo_transporte.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="30dp"
         android:layout_alignParentEnd="true"
         android:background="@drawable/bg_blanco_redondo"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@color/colorNegro"
         android:textSize="20sp" />
 
